[tool.poetry]
name = "osx-tags"
version = "0.2"
description = "Module to manipulate Finder tags on OS X."
authors = ["Ben Samuel"]
license = "MIT"
url = "https://github.com/scooby/osx-tags"

[tool.poetry.dependencies]
python = ">=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,<4"
biplist = "^1.0.3"
xattr = "^0.9.6"
six = "^1.13.0"
click = { version = "^7.0", optional = true }

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pytest = ">=4.6.6"

[tool.poetry.extras]
click = ["click"]

[tool.poetry.scripts]
finder-tags = 'osx_tags.cmd:main [click]'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
